@@ -1,1 +1,22 @@
 # Turing Machine
+
+
+## Running the program
+
+### Prerequisites
+
+You will need to have installed the following:
+- latest version of Java
+- latest version of JavaFX
+
+### Running the program
+
+To run the program, you will need to run the following command in the terminal:
+And having the .jar file in the same directory as the terminal.
+
+```bash
+java --module-path /path/to/JavaFx/lib/ --add-modules=javafx.controls,javafx.fxml -jar ./TuringMachine.jar
+```
+
+## Problems
+Contact us by creating an issue.
